istio/DevConf_bridge_Deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: transparent-proxy
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: transparent-proxy
    spec:
      containers:
      - name: transparent-proxy
        image: 172.30.1.1:5000/istiocbr/transparent-proxy:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
