istio/DevConf_vNew_Deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: devconf-vnew
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: devconf
        version: v2
    spec:
      containers:
      - name: devconf
        image: 172.30.1.1:5000/istiocbr/devconf:vnew
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
