istio/DevConf_vOld_Deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: devconf-vold
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: devconf
        version: vold
    spec:
      containers:
      - name: devconf
        image: 172.30.1.1:5000/istiocbr/devconf:vOld
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
