istio/PizzaIstio_v2_Deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: pizzaistio-v2
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: pizzaistio
        version: v2
    spec:
      containers:
      - name: pizzaistio
        image: 172.30.1.1:5000/test/pizzaistio:v2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
