istio/pizza.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: pizzaistio
    version: v1
  name: pizzaistio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pizzaistio
      version: v1
  template:
    metadata:
      labels:
        app: pizzaistio
        version: v1
    spec:
      containers:
      - image: test/pizza
        imagePullPolicy: IfNotPresent
        name: pizza
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        securityContext:
          privileged: false
