istio/DevConf_Service.yml
apiVersion: v1
kind: Service
metadata:
  name: devconf
  labels:
    app: devconf
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: devconf
