istio/PizzaIstio_v1_Service.yml
apiVersion: v1
kind: Service
metadata:
  name: tmppizzaistio
  labels:
    app: tmppizzaistio
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: tmppizzaistio
