istio/DevConf_Ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: devconf-ingress
  annotations:
    kubernetes.io/ingress.class: istio
spec:
  rules:
  - http:
      paths:
      - path: /.*
        backend:
          serviceName: devconf
          servicePort: 8000
